--- a/KeyerTest/KeyerTest.csproj
+++ b/KeyerTest/KeyerTest.csproj
@@ -8,4 +8,9 @@
         <UseWPF>true</UseWPF>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Grace" Version="8.0.0-RC837" />
+      <PackageReference Include="System.Drawing.Common" Version="8.0.0" />
+    </ItemGroup>
+
 </Project>
